Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,10 @@
 name: Azure Pipelines
 variables:
   python.version: '3.7.6'
+  azureServiceConnectionId: 'MyServiceConnection195071'
+  
+  # TODO: Replace 'mywebapp193576' with the existing Web App name
+  webAppName: 'FakeRestAPI'
 stages:
 - stage: Build
   jobs:
